<resources>
    <string name="app_name">Survey</string>
    <string name="title">WELCOME TO</string>
    <string name="w_2">TAKE PART IN OUR SURVEY!</string>
    <string name="w_3">Before we start,here are things you should know:</string>
    <string name="w_4">-Please be honest when making your choice.\n\n
                       -We are just doing a reaserch so you don\'t have to fake your information.\n\n
                       -Please follow the step we designed for you an don\'t skip any questions.
    </string>
    <string name="w_5">I accept these requests.</string>
    <string name="w_6">LET\'S START!</string>
    <string name="q1_1">Question  1</string>
    <string name="q1_2">Which brand of phone will you choose if you are going to buy a new one?</string>
</resources>
